# openeo_datasets

./: .pre-commit-config.yaml  Makefile  README.md  build_conda_cluster.sh  build_conda_local.sh  environment.txt  exemple_filterspat.py  pyproject.toml  setup.cfg
config/: convert.yaml  convert_mm.yaml  crop.yaml  dwnd.yaml  dwnd_yoel.yaml  generate_datacube.yaml  generate_fp.yaml  stats.yaml
notebooks/: visualize_netcdf.ipynb
src/openeo_mmdc/: build_datacube.py  open.py
src/openeo_mmdc/constant/: dataset.py  torch_dataloader.py
src/openeo_mmdc/dataset/: convert.py  dataclass.py  load.py  load_tensor.py  padding.py  test_load_tensor.py  to_tensor.py  transform.py  utils.py
src/script/: compute_stats.py  compute_stats_pt.py  convert2tensor.py  convert2tensor_mmpretraining.py  crop_data.py  dwnd_cluster.py  dwnd_results.py  generate_datacube.py  generate_fp.py
test/: test_dataclass.py  test_generate_fp.py  test_load_tensor.py  test_to_tensor.py  test_utils.py
