[metadata]
name = openeo-datasets
description = Download MMDC openeo datacube
author = Iris Dumeur
author_email = iris.dumeur@univ-tlse3.fr
license = AGPL-3.0
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url =
# Add here related links, for example:
project_urls =
    Documentation = https://gitlab.cesbio.omp.eu/dumeuri/openeo_datasets.git
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
testing =
    setuptools
    pytest
    pytest-cov
install_requires=
    openeo
[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 79
extend_ignore = E203, W503,E231,E501
ignore = E203, W503,E231,E501
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
[options.packages.find]
where = src
exclude =
    tests

testing =
    setuptools
    pytest
    pytest-cov

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov multitask_ubarn --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
markers =
     slow: mark tests as slow (deselect with '-m "not slow"')
     hal: mark tests that need to run on HAL
    critical: mark test that have to pass
#     system: mark end-to-end system tests
